EB-2001-10-11-0: Changed spool behaviour for (array) jobs
                 - beared down the 32765 subdirectory limit
                 - added some tuning parameters for job spooling
                 - collected duplicated code used in master and execd 

CR-2001-10-10-1: Testsuite:
                 - closed issue # 9 (Create a new test for file parsing)

CR-2001-10-10-0: Testsuite:
                 - new command line option: mfile FILE
                   (don't mail messages, write it to file)
                 - new optional parameter for procedure "wait_for_jobstart"
                   (do a qconf -tsm before waiting for jobstart) 

CR-2001-10-09-2: (sge_rusage.c)
                 - Issue #68 (The accounting file handles only entries < 2048 
                              chars/line)

CR-2001-10-09-1: (rmon_macros.c)
                 - don't use vnsprintf() for ALPHA4 and IRIX6

CR-2001-10-09-0: (parse_job_cull.c)
                 - Issue #67 (long lines in sge_request files causes bus error
                             in qsub)
                 - removed some local char str[1024] definitions and replaced
                   it with error_string buffer one function level above
                 (rmon_macros.c) 
                 - using vnsprintf() system call as default (instead of vsprintf)
                   This should prevent a buffer overflow error
                     
                 

JG-2001-10-09-0: Added statistics for our hashtable implementation that gives
                 following info:
                  - size of hashtable and number of elements stored
                  - number of empty hash chains
                  - maximum and average chain length
                 When a hashtable is resized and log_level is set to log_debug,
                 statistics and profiling information is output to messages 
                 files.

JG-2001-10-08-0: Enabled options -h and -hold_jid for qrsh

AH-2001-10-05-0: Removed warning message in execd 
