@@ -1,3 +1,6 @@
+EB-2001-10-11-1: Changed MAX_SEQNUM from 999,999 to 9,999,999.
+                 - changed qstat output format
+
 EB-2001-10-11-0: Changed spool behaviour for (array) jobs
                  - beared down the 32765 subdirectory limit
                  - added some tuning parameters for job spooling
